Actions
Bug #9607
closedqede: this statement may fall through
Start date:
2018-06-15
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Issue found by gcc 7 build:
../../common/io/qede/579xx/drivers/ecore/ecore_dev.c: In function 'ecore_hw_init': ../../common/io/qede/579xx/drivers/ecore/ecore_dev.c:2219:7: error: this statement may fall through [-Werror=implicit-fallthrough=] if (rc != ECORE_SUCCESS) ^ ../../common/io/qede/579xx/drivers/ecore/ecore_dev.c:2222:3: note: here case FW_MSG_CODE_DRV_LOAD_PORT: ^~~~ ../../common/io/qede/579xx/drivers/ecore/ecore_dev.c:2225:7: error: this statement may fall through [-Werror=implicit-fallthrough=] if (rc != ECORE_SUCCESS) ^ ../../common/io/qede/579xx/drivers/ecore/ecore_dev.c:2228:3: note: here case FW_MSG_CODE_DRV_LOAD_FUNCTION: ^~~~ ../../common/io/qede/579xx/drivers/ecore/ecore_cxt.c: In function 'ecore_cxt_set_pf_params': ../../common/io/qede/579xx/drivers/ecore/ecore_cxt.c:2229:3: error: this statement may fall through [-Werror=implicit-fallthrough=] ecore_rdma_set_pf_params(p_hwfn, ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ &p_hwfn->pf_params.rdma_pf_params, ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ rdma_tasks); ~~~~~~~~~~~ ../../common/io/qede/579xx/drivers/ecore/ecore_cxt.c:2235:2: note: here case ECORE_PCI_ETH: ^~~~ cc1: all warnings being treated as errors
Insert FALLTHROUGH silencers.
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0d7de619fa7b28e48c8e80fa26d724400f4f47a4
commit 0d7de619fa7b28e48c8e80fa26d724400f4f47a4 Author: Toomas Soome <tsoome@me.com> Date: 2018-07-30T17:30:01.000Z 9607 qede: this statement may fall through Reviewed by: Andy Fiddaman <af@citrus-it.net> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Ken Mays <kmays2000@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions