9607 qede: this statement may fall through Reviewed by: Andy Fiddaman <af@citrus-it.net> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Ken Mays <kmays2000@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>